2012-06-24  Dan Espen  <despen@verizon.net>

	* fvwm-menu-desktop.in (main): When root menu doesn't exist,
	print a clear error message and exit.
	(parsemenu): Eliminate %U in exec strings
	(parsemenu): Use printtext.
	(geticonfile): run mkdir for users icon cache.
	Based on Patch 1 from Thomas Funk.

2012-06-22  Dan Espen  <despen@verizon.net>

	* fvwm-menu-desktop.in:
	Rewrite using python and xdg libs.

2012-01-18  Thomas Adam  <thomas@fvwm.org>
	* fvwm-config.in:
	* fvwm-config.1.in:
	Remove --is-final, --is-released, --is-stable from fvwm-config

	It no longer makes sense to report on this information, given how fvwm
	is developed.

2011-12-30  Thomas Adam  <thomas@fvwm.org>
	* fvwm-menu-desktop.in:
	Remove redundant stat(2) calls when performing file-system checks for
	constructing XDG menus.

2011-11-03  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm-perllib.in:
	used @SED@ from configure.ac

2011-05-07    <despen@verizon.net>
	* fvwm-menu-desktop.1.in: Some updates, needs a lot of work. Later.
	* fvwm-menu-desktop.in:
	new option kde_config for alternate name of optional
	kde-config command.
	use kde4-config if kde-config isn't found.
	if no kde-config command at all, use some defaults.

2011-04-28  Thomas Adam <thomas@fvwm.org>
	* fvwm-menu-desktop.in:
	Remove #! line hard-coded to #!/usr/bin/perl

	@PERL@ exists here for just this reason.

2011-04-27    <despen@verizon.net>
	* fvwm-menu-desktop.in: Silently ignore --desktop x.
	Add support for XDG_MENU_PREFIX which according to standards identifies an
	alternate prefix for the applications menu.
	Only warn about missing menu files if verbose flag set.

2011-04-19    <despen@verizon.net>
	* fvwm-menu-desktop.in (interpret_menu): Silently ignore Layout/DefaultLayout.

2011-04-16  Thomas Adam <thomas@fvwm.org>
	* fvwm-menu-desktop.in:
	Fix version check (5.008)

2011-04-16  Thomas Adam <thomas@fvwm.org>
	* fvwm-menu-desktop.in:
	Fix version check (5.008)